k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: safekids
  labels:
    app.kubernetes.io/part-of: safekids
